# mcp-server-nih-clinicaltrials

./: .gitignore  AGENTS.md  README.md  app.yaml  pyproject.toml  requirements-databricks.txt  requirements.txt
.agents/skills/mcp-builder/: SKILL.md
.agents/skills/mcp-builder/reference/: node_mcp_server.md  python_mcp_server.md
.agents/skills/tls-fingerprint-impersonation/: SKILL.md
.claude/: settings.local.json
eval/phoenix/: agent.py  create_dataset.py  datasets.yaml  run_experiment.py
eval/phoenix/datasets/clinicaltrials-eval-0/examples/: clinicaltrials-eval-0.csv
eval/phoenix/datasets/clinicaltrials-test-0/examples/: clinicaltrials-test-0.csv
eval/phoenix/datasets/trace-test-0/examples/: trace-test-0.csv
eval/phoenix/judges/: correctness_judge.py  relevance_judge.py
eval/phoenix/prompts/: system_prompt_v01.txt  system_prompt_v02.txt
src/clinicaltrials/: app.py  models.py  prompts.py  tools.py  utils.py
src/clinicaltrials/instructions/: __init__.py  instructions.py  server_instructions.txt
src/clinicaltrials/models/: __init__.py  analyze_study_locations_input.py  enums.py  fields.py  get_field_values_input.py  get_study.py  search.py  search_datatable_input.py  search_studies_input.py
src/clinicaltrials/skills/clinicaltrials-fields/: SKILL.md  enum_values.md  study_fields.md
src/clinicaltrials/tools/: __init__.py  analyze_locations.py  get_field_values.py  get_study.py  search_datatable.py  search_studies.py
tests/: test_default_fields.py  test_instructions.py  test_models_imports.py  test_skills_fields.py
