[project]
name = "nih-clinicaltrials-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "arize-phoenix>=17.0.0",
    "curl-cffi>=0.14.0",
    "fastmcp>=3.0.2",
    "httpx>=0.28.1",
    "langchain>=1.3.2",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.2",
    "openinference-instrumentation-langchain>=0.1.66",
    "prefab-ui>=0.19.1",
    "pytest>=9.0.3",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
