[project]
name = "nih-clinicaltrials-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arize-phoenix>=17.0.0",
    "curl-cffi>=0.14.0",
    "fastmcp>=3.0.2",
    "httpx>=0.28.1",
    "langchain>=1.3.2",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.2",
    "openinference-instrumentation-langchain>=0.1.66",
    "prefab-ui>=0.19.1",
    "pytest>=9.0.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clinicaltrials"]
artifacts = [
    "src/clinicaltrials/skills/**/*.md",
]

[tool.hatch.build.targets.wheel.force-include]
"src/clinicaltrials/instructions/server_instructions.txt" = "clinicaltrials/instructions/server_instructions.txt"
